--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -107,7 +107,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JFX_23
+platform.active=JDK_23FX
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
